fixes regarding color conversion of planar formats

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -22,38 +22,39 @@
         <video-mode>1080i5000</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
-          <decklink>
+          <!--<decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>5</buffer-depth>
-          </decklink>
-          <!--<stream>
-            <path>udp://224.0.0.1:5554</path>
+          </decklink>-->
+          <stream>
+            <path>udp://239.0.1.1:5554</path>
             <acodec>aac</acodec>
             <vcodec>libx264</vcodec>
             <narrow>false</narrow>
-            <options>tune=zerolatency,preset=veryfast</options>
+            <options>tune=zerolatency,preset=ultrafast</options>
             <vrate>1024</vrate> 
             <arate>128</arate>
-          </stream>-->
-          <ndi>
+            <output-metadata>service_name=TS 1,service_provider=Puch Software</output-metadata>
+          </stream>
+          <!--<ndi>
             <name>PRV</name>
-          </ndi>
+          </ndi>-->
         </consumers>
     </channel>
   </channels>
   <recorders>
-    <decklink>
+    <!--<decklink>
       <device>1</device>
       <preroll>1</preroll>
       <offset>2</offset>
-    </decklink>
+    </decklink>-->
   </recorders>
   <controllers>
     <tcp>
-        <port>5251</port>
+        <port>5250</port>
         <protocol>AMCP</protocol>
     </tcp>
   </controllers>
